# SEDER-Media-Suite-Folder-Compare

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QT_BUILD.md  README.md  SECURITY.md  TRADEMARKS.md
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
include/: seder_folder_compare.h
packaging/linux/: com.sederproductions.foldercompare.desktop
qt/: CMakeLists.txt
qt/i18n/: seder_de.ts  seder_en.ts  seder_es.ts  seder_fr.ts  seder_ja.ts
qt/qml/: Main.qml
qt/src/: CompareFilterProxyModel.cpp  CompareFilterProxyModel.h  CompareResultTableModel.cpp  CompareResultTableModel.h  FolderCompareController.cpp  FolderCompareController.h  FolderCompareUtils.h  FolderCompareWorker.cpp  FolderCompareWorker.h  FolderTransferWorker.cpp  FolderTransferWorker.h  main.cpp
qt/tests/: test_model.cpp
src/: compare.rs  diff.rs  ffi.rs  lib.rs  media.rs  report.rs  sync.rs  tests.rs  transfer.rs
