[package]
name = "seder-folder-compare"
version = "0.1.5"
edition = "2021"
license = "GPL-3.0-only"
description = "A local-first Qt/Rust folder comparison utility for post-production workflows."
readme = "README.md"
repository = "https://github.com/sederproductions/seder-folder-compare"
keywords = ["folder-compare", "media", "qt", "rust", "post-production"]
categories = ["filesystem", "gui", "multimedia"]

[workspace]
resolver = "2"

[lib]
name = "seder_folder_compare"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
twox-hash = { version = "2.1", default-features = false, features = ["xxhash64"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.13"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
