[package]
name = "seder-folder-compare"
version = "0.1.27"
edition = "2021"
license = "GPL-3.0-only"
description = "A local-first Qt/Rust folder comparison utility for post-production workflows."
readme = "README.md"
repository = "https://github.com/SEDERProductions/SEDER-Media-Suite-Folder-Compare"
keywords = ["folder-compare", "media", "qt", "rust", "post-production"]
categories = ["filesystem", "gui", "multimedia"]

[workspace]
resolver = "2"

[lib]
name = "seder_folder_compare"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.13"
filetime = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
