[package]
name = "seder-folder-compare"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A local-first Qt/Rust folder comparison utility for post-production workflows."
readme = "README.md"
repository = "https://github.com/SEDERProductions/SEDER-Media-Suite-Folder-Compare"
keywords = ["folder-compare", "media", "qt", "rust", "post-production"]
categories = ["filesystem", "gui", "multimedia"]

[workspace]
resolver = "2"

[lib]
name = "seder_folder_compare"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "sfc"
path = "src/bin/sfc.rs"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.6"
kamadak-exif = "0.6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp", "tiff"] }
symphonia = { version = "0.5", features = ["all"] }

[dev-dependencies]
tempfile = "3.13"
filetime = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
